--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,15 @@
         android:orientation="horizontal">
 
 
-        <ImageView
-            android:id="@+id/camera"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:padding="5dp"
-            app:srcCompat="@drawable/camera" />
+            <ImageView
+                android:id="@+id/camera"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:padding="5dp"
+                app:srcCompat="@drawable/camera"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -58,8 +59,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="0dp"
                 android:padding="5dp"
-                android:tint="@color/textcolor"
-                app:srcCompat="@drawable/send" />
+                app:srcCompat="@drawable/send"
+                app:tint="@color/textcolor" />
 
         </LinearLayout>
 
